# EspHomeVoipLib

./: .gitignore  .gitmodules  ESP-HOSTED-CO-PROCESSOR-FLASHING.md  README.md  example.yaml  example_esp32p4.yaml  i2s_test.yaml  p4sip.yaml  package.json  platformio.ini
ESP-Hosted-NG-release_v1.0.4.0.0/esp32/sdio+uart/: md5.txt  sdkconfig
ESP-Hosted-NG-release_v1.0.4.0.0/esp32/sdio_only/: md5.txt  sdkconfig
ESP-Hosted-NG-release_v1.0.4.0.0/esp32/spi+uart/: md5.txt  sdkconfig
ESP-Hosted-NG-release_v1.0.4.0.0/esp32/spi_only/: flash_cmd  md5.txt  sdkconfig
ESP-Hosted-NG-release_v1.0.4.0.0/esp32c2/spi+uart/: flash_cmd  md5.txt  sdkconfig
ESP-Hosted-NG-release_v1.0.4.0.0/esp32c2/spi_only/: md5.txt  sdkconfig
ESP-Hosted-NG-release_v1.0.4.0.0/esp32c3/spi+uart/: flash_cmd  md5.txt  sdkconfig
ESP-Hosted-NG-release_v1.0.4.0.0/esp32c3/spi_only/: md5.txt  sdkconfig
ESP-Hosted-NG-release_v1.0.4.0.0/esp32c6/sdio+uart/: flash_cmd  md5.txt  sdkconfig
ESP-Hosted-NG-release_v1.0.4.0.0/esp32c6/sdio_only/: md5.txt  sdkconfig
components/mic_recorder/: __init__.py  manifest.json  mic_recorder.cpp  mic_recorder.h
components/sip/: manifest.json  sip.cpp  sip.h
components/voip/: __init__.py  automation.cpp  automation.h  g711.cpp  g711.h  library.json  manifest.json  md5_util.cpp  md5_util.h  voip.cpp  voip.h
components/voip/tests/: CMakeLists.txt  README.md  test_md5.cpp
esphome_components/sip/: __init__.py  sip.cpp
esphome_components/voip/: __init__.py
scripts/: DEPRECATED_flash_esp32c6_copro_mcu.ps1  esphome.bat  flash_esp32c6_copro_mcu.ps1
(+12 files in other folders)
